# SoEiXRS

./: CMakeLists.txt  LICENSE  README.md
src/: define.hh  include.hh  main.cpp  vis.mac
src/classes/: ActionInitialization.cpp  ActionInitialization.hpp  DetectorConstruction.cpp  DetectorConstruction.hpp  DetectorPosition.hh  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction.hpp  SteppingAction.cpp  SteppingAction.hpp  UIThread.cpp  UIThread.hpp
